--- a/myCrypto/templates/spa_crypto.html
+++ b/myCrypto/templates/spa_crypto.html
@@ -91,7 +91,7 @@
                 <div class="row">                        
                     <div class="column">
                         <label for="cantidad_inicial">Cantidad inicial</label>
-                        <input type="number" name="cantidad_inicial" id="cantidad_inicial"> </select>
+                        <input type="number" name="cantidad_inicial" id="cantidad_inicial"> 
                     </div>
 
 
@@ -100,7 +100,7 @@
                         <input type="number" name="cantidad_resultante" id="cantidad_resultante" step="any">
                     </div>
                 </div>
-                
+            
                 <div class="row">
                     <div class="column">
                         <button class="button is-info is-hovered is-focused" id="convertir">Convertir</button>
